--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-Time Stock and Crypto Prices</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Real-Time Stock and Crypto Prices</h1>
-    <div id="prices"></div>
-    <h2>Recommendations</h2>
-    <div id="recommendations"></div>
+    <div class="container">
+        <h1 class="text-center my-4">Real-Time Stock and Crypto Prices</h1>
+        <div id="prices" class="row"></div>
+        <h2 class="text-center my-4">Recommendations</h2>
+        <div id="recommendations" class="row"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
